# signale.py

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
docs/: README.md  package.json
docs/.vuepress/: config.js
docs/docs/: README.md  api.md  custom.md  customize.md  formatters.md  getting-started.md  loggers.md  scopes.md
signalepy/: __init__.py
tests/: test_signalepy.py
